--- a/View/TabletView/LiveTourCard.xaml
+++ b/View/TabletView/LiveTourCard.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BookingApp.View.TabletView.TourCard"
+﻿<UserControl x:Class="BookingApp.View.TabletView.LiveTourCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="1000">
     <Border BorderBrush="Black" BorderThickness="1" Margin="5">
-        <Grid Background="AliceBlue" MouseLeftButtonDown="TourCardClick" Height="300" Width="1000">
+        <Grid Background="AliceBlue" MouseLeftButtonDown="LiveTourCardClick" Height="300" Width="1000">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -18,9 +18,8 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Border Grid.Column="0" Grid.RowSpan="6" Margin="20" BorderBrush="Black" BorderThickness="1">
+            <Border Grid.Column="0" Grid.RowSpan="5" Margin="20" BorderBrush="Black" BorderThickness="1">
                 <Border.Background>
                     <ImageBrush ImageSource="{Binding ProfilePictures[0]}"/>
                 </Border.Background>
@@ -30,7 +29,6 @@
             <TextBlock Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding LanguageTemplate, StringFormat=Language: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="3" Grid.Column="1" Margin="10" Text="{Binding CurrentTouristNumber, StringFormat=Tourists: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding Duration, StringFormat=Duration: {0} hours}" FontSize="18"/>
-            <TextBlock Grid.Row="5" Grid.Column="1" Margin="10" Text="{Binding Beggining, StringFormat=Beggining: {0}}" FontSize="18"/>
         </Grid>
     </Border>
 </UserControl>
