--- a/View/TabletView/TourPage.xaml
+++ b/View/TabletView/TourPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="BookingApp.View.TabletView.LiveTourPage"
+﻿<Page x:Class="BookingApp.View.TabletView.TourPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.View.TabletView"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"      
       d:DesignHeight="726" d:DesignWidth="1024"
-      Title="LiveTourPage">
+      Title="TourPage">
 
     <Grid Margin="0,10,0,10" Background="White">
         <Grid.ColumnDefinitions>
@@ -30,12 +30,14 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Name, StringFormat=Name: {0}}" FontSize="20" FontWeight="Bold"/>
-            <TextBlock Grid.Row="1" Grid.Column="1" Margin="10" Text="{Binding tourDTO.LocationTemplate, StringFormat=Location: {0}}" FontSize="18"/>
-            <TextBlock Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding tourDTO.LanguageTemplate, StringFormat=Language: {0}}" FontSize="18"/>
-            <TextBlock Grid.Row="3" Grid.Column="1" Margin="10" Text="{Binding tourDTO.CurrentTouristNumber, StringFormat=Tourists: {0}}" FontSize="18"/>
-            <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Duration, StringFormat=Duration: {0} hours}" FontSize="18"/>
+            <TextBlock Grid.Row="1" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Duration, StringFormat=Duration: {0} hours}" FontSize="18"/>
+            <TextBlock Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding tourDTO.CurrentTouristNumber, StringFormat=Tourists: {0}}" FontSize="18"/>
+            <TextBlock Grid.Row="3" Grid.Column="1" Margin="10" Text="{Binding tourDTO.LocationTemplate, StringFormat=Location: {0}}" FontSize="18"/>
+            <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding tourDTO.LanguageTemplate, StringFormat=Language: {0}}" FontSize="18"/>
+            <TextBlock Grid.Row="5" Grid.Column="1" Margin="10" Text="{Binding tourDTO.Beggining, StringFormat=Beggining: {0}}" FontSize="18"/>
         </Grid>
         <DockPanel Grid.Row="1" Grid.Column="0">
             <Label DockPanel.Dock="Top" Content="Description:" Margin="5" FontSize="18"/>
@@ -62,8 +64,8 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
-            <Button x:Name="checkButton" Grid.Row="2" Content="Check Next Keypoint" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Margin="20" Click="checkButton_Click"/>
         </Grid>
-        <Button Grid.ColumnSpan="2" Grid.Row="2" x:Name="finishButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Finish" Click="finishButton_Click"/>
+        <Button Grid.Column="0" Grid.Row="2" x:Name="closeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Close" Click="closeButton_Click"/>
+        <Button Grid.Column="1" Grid.Row="2" x:Name="deletehButton" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Content="Delete" Click="deletehButton_Click"/>
     </Grid>
 </Page>
