--- a/View/AndroidViews/ReservationReviewsPage.xaml
+++ b/View/AndroidViews/ReservationReviewsPage.xaml
@@ -4,10 +4,14 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+      xmlns:cmd="clr-namespace:BookingApp.Commands"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
       Title="ReservationReviewsPage">
-
+    <Page.CommandBindings>
+        <CommandBinding x:Name="AcceptCommand" Command="cmd:RoutedCommands.AcceptButtonCommand" CanExecute="AcceptButtonCommand_CanExecute" Executed="AcceptButtonCommand_Executed" ></CommandBinding>
+        <CommandBinding x:Name="DeclineCommand" Command="cmd:RoutedCommands.DeclineButtonCommand" CanExecute="DeclineCommand_CanExecute" Executed="DeclineCommand_Executed" ></CommandBinding>
+    </Page.CommandBindings>
     <Grid Background="LightBlue">
         <TabControl Height="600" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TabItem Header="Reviews" Width="120" Height="40">
@@ -67,11 +71,11 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="Decline" Grid.Row="1" Content="Decline" Grid.Column="1" Width="120" Height="40" Click="Decline_Click">
+                    <Button x:Name="Decline" Grid.Row="1" Content="Decline" Grid.Column="1" Width="120" Height="40" Command="{Binding ElementName=DeclineCommand, Path=Command}">
 
                     </Button>
 
-                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Content="Accept" Click="Accept_Click">
+                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Content="Accept" Command="{Binding ElementName=AcceptCommand, Path=Command}">
                     </Button>
 
                     <ListView x:Name="RequestsList" ItemsSource="{Binding RescheduleRequestDTOs, UpdateSourceTrigger=PropertyChanged}"
