--- a/View/AndroidViews/MainWindow.xaml
+++ b/View/AndroidViews/MainWindow.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="260"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid Background="#374375" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
@@ -40,17 +40,16 @@
                 <Image Source="{StaticResource HelpIcon}"/>
             </Button>
         </Grid>
-        <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2"/>
+        <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2" Navigated="mainFrame_Navigated"/>
         <Frame x:Name="sideFrame"  Grid.Row="0"  Grid.Column="0" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
-        <Frame x:Name="smallNotificationFrame" Grid.Column="1" Grid.Row="1" Height="40" Width="40" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,10,0"
-               NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
+        <Frame x:Name="blackFrame" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
         <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="LightSkyBlue">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Width="50" Background="Transparent" BorderBrush="Transparent">
+            <Button Grid.Column="0" Width="50" Background="Transparent" BorderBrush="Transparent" Click="BackButton_Click">
                 <Image Source="{StaticResource BackIcon}" Stretch="UniformToFill" Height="35" Width="35"/>
             </Button>
             <Button Grid.Column="1" Width="50" Background="Transparent" BorderBrush="Transparent" Click="HomeButton_Click">
