--- a/View/WebViews/AccommodationReservationCard.xaml
+++ b/View/WebViews/AccommodationReservationCard.xaml
@@ -90,7 +90,7 @@
                 </StackPanel>
             </Label>
 
-            <Button x:Name="buttonRate" Grid.Column="2" Grid.Row="0" Margin="30 10 10 10">
+            <Button x:Name="buttonRate" Grid.Column="2" Grid.Row="0" Margin="30 10 10 10" Click="ButtonReviewClick">
                 <WrapPanel>
                     <Image Style="{StaticResource ButtonImage}" Source="{StaticResource ReviewIcon}"/>
                 </WrapPanel>
