feat: Added finished tours page and reviews model

--- a/View/TabletView/MenuBarPage.xaml
+++ b/View/TabletView/MenuBarPage.xaml
@@ -21,7 +21,6 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Label Grid.Row="0" HorizontalAlignment="Right" Content="Tour Menu" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" Margin="0,5,10,1"/>
@@ -38,16 +37,16 @@
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Add Tour</Label>
                 </StackPanel>
             </Button>
-            <Button x:Name="removeButton" Grid.Row="3" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="removeButton_Click">
-                <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/trash.png" Width="40" Height="40" />
-                    <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Remove Tour</Label>
-                </StackPanel>
-            </Button>
-            <Button x:Name="followLiveButton" Grid.Row="4" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="followLiveButton_Click">
+            <Button x:Name="followLiveButton" Grid.Row="3" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="followLiveButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
                     <Image Source="/Resources/Images/live.png" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Follow Live</Label>
+                </StackPanel>
+            </Button>
+            <Button x:Name="finishedToursButton" Grid.Row="4" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="finishedToursButton_Click">
+                <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
+                    <Image Source="\Resources\Images\finish.png" Width="40" Height="40" />
+                    <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Finished Tours</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="statsButton" Grid.Row="5" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="statsButton_Click">
@@ -56,13 +55,7 @@
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Tour Stats</Label>
                 </StackPanel>
             </Button>
-            <Button x:Name="reviewsButton" Grid.Row="6" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="reviewsButton_Click">
-                <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/reviews.png" Width="40" Height="40" />
-                    <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Tourist Reviews</Label>
-                </StackPanel>
-            </Button>
-            <Button x:Name="requestsButton" Grid.Row="7" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="requestsButton_Click">
+            <Button x:Name="requestsButton" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="requestsButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
                     <Image Source="/Resources/Images/request.png" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Tourist Requests</Label>
