--- a/View/TabletView/FinishedTourCard.xaml
+++ b/View/TabletView/FinishedTourCard.xaml
@@ -1,19 +1,19 @@
-﻿<UserControl x:Class="BookingApp.View.TabletView.TourCard"
+﻿<UserControl x:Class="BookingApp.View.TabletView.FinishedTourCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookingApp.View.TabletView"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="1000">
+                          d:DesignHeight="300" d:DesignWidth="1000">
     <Border BorderBrush="Black" BorderThickness="1" Margin="5">
         <Grid Background="AliceBlue" MouseLeftButtonDown="TourCardClick" Height="300" Width="1000">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="0.5*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -30,7 +30,9 @@
             <TextBlock Grid.Row="2" Grid.Column="1" Margin="10" Text="{Binding LanguageTemplate, StringFormat=Language: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="3" Grid.Column="1" Margin="10" Text="{Binding CurrentTouristNumber, StringFormat=Tourists: {0}}" FontSize="18"/>
             <TextBlock Grid.Row="4" Grid.Column="1" Margin="10" Text="{Binding Duration, StringFormat=Duration: {0} hours}" FontSize="18"/>
-            <TextBlock Grid.Row="5" Grid.Column="1" Margin="10" Text="{Binding Beggining, StringFormat=Beggining: {0}}" FontSize="18"/>
+
+            <Label Grid.Row="1" Grid.Column="2" Margin="10" FontSize="18" Content="Start:"/>
+            <TextBlock Grid.Row="2" Grid.Column="2" Margin="10" Text="{Binding Beggining}" FontSize="18"/>
         </Grid>
     </Border>
 </UserControl>
