--- a/View/DesktopViews/TouristMainWindow.xaml
+++ b/View/DesktopViews/TouristMainWindow.xaml
@@ -9,7 +9,7 @@
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <BitmapImage x:Key="HomeIcon" UriSource="../../Resources/Images/home.png"/>
-        <BitmapImage x:Key="AccountIcon" UriSource="../../Resources/Images/account.png"/>
+        <BitmapImage x:Key="CouponIcon" UriSource="../../Resources/Images/Icons/coupon.png"/>
         <BitmapImage x:Key="ReservationsIcon" UriSource="../../Resources/Images/reservations.png"/>
         <Style TargetType="Image" x:Key="IconStyle">
             <Setter Property="Width" Value="50"/>
@@ -42,20 +42,20 @@
                         <TextBlock Text="Home"/>
                     </WrapPanel>
                 </Button>
-                <Button x:Name="MyAccountButton"
-                    Click="MyAccountButton_Click"
-                    Style="{StaticResource ButtonStyle}">
-                    <WrapPanel>
-                        <Image Source="{StaticResource AccountIcon}" Style="{StaticResource IconStyle}"/>
-                        <TextBlock Text="My Account"/>
-                    </WrapPanel>
-                </Button>
                 <Button x:Name="ReservationsButton"
                     Click="ReservationsButton_Click"
                     Style="{StaticResource ButtonStyle}">
                     <WrapPanel>
                         <Image Source="{StaticResource ReservationsIcon}" Style="{StaticResource IconStyle}"/>
                         <TextBlock Text="Reservations"/>
+                    </WrapPanel>
+                </Button>
+                <Button x:Name="CouponsButton"
+                        Click="CouponsButton_Click"
+                        Style="{StaticResource ButtonStyle}">
+                    <WrapPanel>
+                        <Image Source="{StaticResource CouponIcon}" Style="{StaticResource IconStyle}"/>
+                        <TextBlock Text="Coupons"/>
                     </WrapPanel>
                 </Button>
             </StackPanel>
