--- a/View/WebViews/ReviewAccommodationModalDialog.xaml
+++ b/View/WebViews/ReviewAccommodationModalDialog.xaml
@@ -4,11 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BookingApp.View.WebViews"
+             xmlns:converter="clr-namespace:BookingApp.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="800"
              HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 30 0 30">
     
     <UserControl.Resources>
+        <converter:ImportanceTypeToStringConverter x:Key="ImportanceTypeToStringConverter"/>
+
+        <DataTemplate x:Key="ComboBoxItemTemplate">
+            <TextBlock Text="{Binding Converter={StaticResource ImportanceTypeToStringConverter}}"/>
+        </DataTemplate>
+
         <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
         <BitmapImage x:Key="ConfirmIcon" UriSource="../../Resources/Images/Icons/confirm-icon.png"/>
         <BitmapImage x:Key="CaneclIcon" UriSource="../../Resources/Images/Icons/cancel-icon.png"/>
@@ -34,6 +41,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                
+                
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
@@ -44,20 +53,20 @@
 
             <Grid Grid.Row="1">
 
-                <Label Grid.Row="1" FontSize="15" Content="{Binding Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
+                <Label Grid.Row="1" FontSize="15" Content="{Binding Path=Reservation.Accommodation.Name}" HorizontalAlignment="Left" Margin="10 10 0 10"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                     <Label HorizontalAlignment="Right" Margin="10 10 0 0">
                         <WrapPanel>
                             <Image Style="{StaticResource ImageStyle}" Height="20" Width="20" Source="{StaticResource CalendarIcon}"/>
-                            <TextBlock Text="{Binding StartDate}"/>
+                            <TextBlock Text="{Binding Reservation.StartDate}"/>
                         </WrapPanel>
                     </Label>
 
                     <Label HorizontalAlignment="Right" Margin="0 10 10 10">
                         <WrapPanel>
                             <Image Style="{StaticResource ImageStyle}" Source="{StaticResource LocationIcon}"/>
-                            <TextBlock Text="{Binding Accommodation.Location.LocationInfoTemplate}"/>
+                            <TextBlock Text="{Binding Path=Reservation.Accommodation.Location.LocationInfoTemplate}"/>
                         </WrapPanel>
                     </Label>
                 </StackPanel>
@@ -70,19 +79,22 @@
                             <Label Content="Owner correctness:" Style="{StaticResource LabelStyle}"/>
                             <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderOwnerCorrectness, Path=Value}"/>
                             <Slider  x:Name="sliderOwnerCorrectness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
-                                Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"/>
+                                Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"
+                                Value="{Binding Review.OwnerCorrectnessGrade,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Cleanliness:" Style="{StaticResource LabelStyle}"/>
+                            <Label Content="Accommodation cleanliness:" Style="{StaticResource LabelStyle}"/>
                             <Label Style="{StaticResource LabelStyle}" Content="{Binding ElementName=sliderCleanliness, Path=Value}"/>
                             <Slider  x:Name="sliderCleanliness" Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
-                                Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"/>
+                                Width="200" VerticalAlignment="Center" Margin="10 10 0 0" HorizontalAlignment="Center"
+                                Value="{Binding Review.AccommodationCleannessGrade,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
 
                         <StackPanel>
                             <Label Content="Your comment" Style="{StaticResource LabelStyle}"/>
-                            <TextBox TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left"/>
+                            <TextBox TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left"
+                            Text="{Binding Review.GuestComment,Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
@@ -96,18 +108,24 @@
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal">
-                            <CheckBox x:Name="checkBoxRequiresRenovation" Margin="10 0 0 0" VerticalAlignment="Center"/>
+                            <CheckBox x:Name="checkBoxRequiresRenovation" Margin="10 0 0 0" VerticalAlignment="Center"
+                                      IsChecked="{Binding Review.RequiresRenovation, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"
+                                      Unchecked="checkBoxRequiresRenovationUnchecked"/>
                             <Label Content="Requires renovation" Style="{StaticResource LabelStyle}"/>
                         </StackPanel>
 
                         <StackPanel Margin="0 10 0 0" Orientation="Horizontal" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}">
                             <Label Content="Renovation importance" Style="{StaticResource LabelStyle}"/>
-                            <ComboBox x:Name="comboBoxRenovationImportance" Width="200" Margin="10 0 0 0"/>
+                            <ComboBox x:Name="comboBoxRenovationImportance" Width="200" Margin="10 0 0 0"
+                                      ItemsSource="{Binding ImportanceTypes}"
+                                      SelectedValue="{Binding Review.Importance, Mode=OneWayToSource}"
+                                      ItemTemplate="{StaticResource ComboBoxItemTemplate}"/>
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" IsEnabled="{Binding ElementName=checkBoxRequiresRenovation, Path=IsChecked}">
                             <Label Content="Renovation comment" Style="{StaticResource LabelStyle}"/>
-                            <TextBox TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left"/>
+                            <TextBox x:Name="textBoxRenovationComment" TextWrapping="Wrap" Width="400" Height="100" Margin="10 0 0 0" HorizontalAlignment="Left"
+                                     Text="{Binding Review.RenovationComment, Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                         
                     </StackPanel>
@@ -121,7 +139,7 @@
                 </WrapPanel>
             </Button>
 
-            <Button Grid.Row="3" Margin="10" HorizontalAlignment="Right">
+            <Button Grid.Row="3" Margin="10" HorizontalAlignment="Right" Click="ButtonConfirmClick">
                 <WrapPanel Margin="10">
                     <Image Style="{StaticResource ImageStyle}" Source="{StaticResource ConfirmIcon}"/>
                     <TextBlock Text="Confirm"/>
