--- a/WPF/Android/Views/AccommodationPage.xaml
+++ b/WPF/Android/Views/AccommodationPage.xaml
@@ -1,17 +1,17 @@
-﻿<Page x:Class="BookingApp.View.AndroidViews.AccommodationPage"
+﻿<Page x:Class="BookingApp.WPF.Android.Views.AccommodationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+      xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
       Title="AccommodationPage">
     <Page.Resources>
-        <BitmapImage x:Key="AddIcon" UriSource="../../Resources/Images/add-icon3.png"/>
-        <BitmapImage x:Key="RenovationsIcon" UriSource="../../Resources/Images/renovation-icon.png"/>
-        <BitmapImage x:Key="GuidanceIcon" UriSource="../../Resources/Images/guidance-icon.png"/>
-        <BitmapImage x:Key="StatisticsIcon" UriSource="../../Resources/Images/statistics-icon.png"/>
+        <BitmapImage x:Key="AddIcon" UriSource="../../../Resources/Images/add-icon3.png"/>
+        <BitmapImage x:Key="RenovationsIcon" UriSource="../../../Resources/Images/renovation-icon.png"/>
+        <BitmapImage x:Key="GuidanceIcon" UriSource="../../../Resources/Images/guidance-icon.png"/>
+        <BitmapImage x:Key="StatisticsIcon" UriSource="../../../Resources/Images/statistics-icon.png"/>
     </Page.Resources>
     <Grid Background="#BABDE2">
         <Grid.RowDefinitions>
