--- a/WPF/Android/Views/AddAccomodationPage.xaml
+++ b/WPF/Android/Views/AddAccomodationPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="BookingApp.View.AndroidViews.AddAccommodationPage"
+﻿<Page x:Class="BookingApp.WPF.Android.Views.AddAccommodationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+      xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
       xmlns:converters="clr-namespace:BookingApp.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
