--- a/WPF/Android/Views/BlackPage.xaml
+++ b/WPF/Android/Views/BlackPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="BookingApp.View.AndroidViews.BlackPage"
+﻿<Page x:Class="BookingApp.WPF.Android.Views.BlackPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+      xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="180"
       Title="BlackPage">
