--- a/WPF/Android/Views/SideMenuPage.xaml
+++ b/WPF/Android/Views/SideMenuPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="BookingApp.View.AndroidViews.SideMenuPage"
+﻿<Page x:Class="BookingApp.WPF.Android.Views.SideMenuPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+      xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="260"
       Title="SideMenuPage">
@@ -79,7 +79,7 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-                <Image Height="45" Width="45" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../Resources/Images/owner-icon.png"/>
+                <Image Height="45" Width="45" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Source="../../../Resources/Images/owner-icon.png"/>
                 <Label x:Name="UsernameLabel" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" FontSize="16" FontWeight="Bold" VerticalAlignment="Top" Padding="0"/>
                 <Label Grid.Column="1" Grid.Row="1" FontSize="16" VerticalAlignment="Top" HorizontalAlignment="Left" Content="Average Grade:" Height="25" Padding="0"/>
 
