--- a/WPF/Android/Views/ViewGuestGradeWindow.xaml
+++ b/WPF/Android/Views/ViewGuestGradeWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="BookingApp.View.AndroidViews.ViewGuestGradeWindow"
+﻿<Window x:Class="BookingApp.WPF.Android.Views.ViewGuestGradeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
+        xmlns:local="clr-namespace:BookingApp.WPF.Android.Views"
         mc:Ignorable="d"
         Title="ViewGuestGradeWindow" Height="330" Width="350"
         WindowStartupLocation="CenterScreen">
