--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="BookingApp.View.WebViews.CreateReservationPage"
+﻿<Page x:Class="BookingApp.WPF.Web.Views.CreateReservationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BookingApp.View.WebViews"
+      xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
       xmlns:converter="clr-namespace:BookingApp.Converters"
       mc:Ignorable="d" 
       d:DesignHeight="530" d:DesignWidth="850"
@@ -11,11 +11,6 @@
 
     <Page.Resources>
         <converter:CountToBooleanConverter x:Key="CountToBooleanConverter"/>
-
-        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
-        <BitmapImage x:Key="HouseIcon" UriSource="../../Resources/Images/Icons/house-icon.png"/>
-        <BitmapImage x:Key="CalendarIcon" UriSource="../../Resources/Images/Icons/calendar-icon.png"/>
-        <BitmapImage x:Key="PeopleIcon" UriSource="../../Resources/Images/Icons/people-icon.png"/>
 
         <Style TargetType="Image">
             <Setter Property="Height" Value="16"/>
