--- a/WPF/Web/Views/AccommodationReservationCard.xaml
+++ b/WPF/Web/Views/AccommodationReservationCard.xaml
@@ -1,21 +1,14 @@
-﻿<UserControl x:Class="BookingApp.View.WebViews.AccommodationReservationCard"
+﻿<UserControl x:Class="BookingApp.WPF.Web.Views.AccommodationReservationCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BookingApp.View.WebViews"
+             xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContextChanged="UserControlDataContextChanged">
 
     <UserControl.Resources>
-        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
-        <BitmapImage x:Key="HouseIcon" UriSource="../../Resources/Images/Icons/house-icon.png"/>
-        <BitmapImage x:Key="CalendarIcon" UriSource="../../Resources/Images/Icons/calendar-icon.png"/>
-        <BitmapImage x:Key="PeopleIcon" UriSource="../../Resources/Images/Icons/people-icon.png"/>
-        <BitmapImage x:Key="CancelEventIcon" UriSource="../../Resources/Images/Icons/cancel-event-icon.png"/>
-        <BitmapImage x:Key="ReviewIcon" UriSource="../../Resources/Images/Icons/star-icon.png"/>
-        <BitmapImage x:Key="RescheduleIcon" UriSource="../../Resources/Images/Icons/reschedule-icon.png"/>
 
         <Style x:Key="InfoTextBlock" TargetType="TextBlock">
             <Setter Property="Margin" Value="10 5 0 5"/>
