--- a/WPF/Web/Views/RescheduleReservationModalDialog.xaml
+++ b/WPF/Web/Views/RescheduleReservationModalDialog.xaml
@@ -1,19 +1,14 @@
-﻿<UserControl x:Class="BookingApp.View.WebViews.RescheduleReservationModalDialog"
+﻿<UserControl x:Class="BookingApp.WPF.Web.Views.RescheduleReservationModalDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BookingApp.View.WebViews"
+             xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              mc:Ignorable="d" 
              d:DesignHeight="230" d:DesignWidth="800"
              HorizontalAlignment="Center" VerticalAlignment="Center">
 
     <UserControl.Resources>
-        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
-        <BitmapImage x:Key="ConfirmIcon" UriSource="../../Resources/Images/Icons/confirm-icon.png"/>
-        <BitmapImage x:Key="CaneclIcon" UriSource="../../Resources/Images/Icons/cancel-icon.png"/>
-        <BitmapImage x:Key="CalendarIcon" UriSource="../../Resources/Images/Icons/calendar-icon.png"/>
-        <BitmapImage x:Key="RightArrowIcon" UriSource="../../Resources/Images/Icons/right-arrow-icon.png"/>
 
         <Style x:Key="ImageStyle" TargetType="Image">
             <Setter Property="Height" Value="16"/>
