--- a/WPF/Web/Views/ReservationsPage.xaml
+++ b/WPF/Web/Views/ReservationsPage.xaml
@@ -1,18 +1,15 @@
-﻿<Page x:Class="BookingApp.View.WebViews.ReservationsPage"
+﻿<Page x:Class="BookingApp.WPF.Web.Views.ReservationsPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BookingApp.View.WebViews"
+             xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800"
              x:Name="reservationsPage"
              Loaded="ReservationsPageLoaded">
 
     <Page.Resources>
-        <BitmapImage x:Key="TimeIcon" UriSource="../../Resources/Images/Icons/time-icon.png"/>
-        <BitmapImage x:Key="ScheduledIcon" UriSource="../../Resources/Images/Icons/scheduled-icon.png"/>
-
         <Style x:Key="ButtonImage" TargetType="Image">
             <Setter Property="Height" Value="20"/>
             <Setter Property="Width" Value="20"/>
