--- a/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
+++ b/WPF/Web/Views/ReviewAccommodationModalDialog.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="BookingApp.View.WebViews.ReviewAccommodationModalDialog"
+﻿<UserControl x:Class="BookingApp.WPF.Web.Views.ReviewAccommodationModalDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BookingApp.View.WebViews"
+             xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              xmlns:converter="clr-namespace:BookingApp.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="800"
@@ -15,12 +15,6 @@
         <DataTemplate x:Key="ComboBoxItemTemplate">
             <TextBlock Text="{Binding Converter={StaticResource ImportanceTypeToStringConverter}}"/>
         </DataTemplate>
-
-        <BitmapImage x:Key="LocationIcon" UriSource="../../Resources/Images/Icons/location-icon.png"/>
-        <BitmapImage x:Key="ConfirmIcon" UriSource="../../Resources/Images/Icons/confirm-icon.png"/>
-        <BitmapImage x:Key="CaneclIcon" UriSource="../../Resources/Images/Icons/cancel-icon.png"/>
-        <BitmapImage x:Key="CalendarIcon" UriSource="../../Resources/Images/Icons/calendar-icon.png"/>
-        <BitmapImage x:Key="CameraIcon" UriSource="../../Resources/Images/Icons/camera-icon.png"/>
 
         <Style x:Key="ImageStyle" TargetType="Image">
             <Setter Property="Height" Value="16"/>
