--- a/WPF/Tablet/Views/FinishedTourCard.xaml
+++ b/WPF/Tablet/Views/FinishedTourCard.xaml
@@ -33,6 +33,8 @@
 
             <Label Grid.Row="1" Grid.Column="2" Margin="10" FontSize="18" Content="Start:"/>
             <TextBlock Grid.Row="2" Grid.Column="2" Margin="10" Text="{Binding Beggining}" FontSize="18"/>
+            <Label Grid.Row="3" Grid.Column="2" Margin="10" FontSize="18" Content="End:"/>
+            <TextBlock Grid.Row="4" Grid.Column="2" Margin="10" Text="{Binding End}" FontSize="18"/>
         </Grid>
     </Border>
 </UserControl>
