--- a/WPF/Web/Views/ReservationsPage.xaml
+++ b/WPF/Web/Views/ReservationsPage.xaml
@@ -6,8 +6,7 @@
              xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800"
-             x:Name="reservationsPage"
-             Loaded="ReservationsPageLoaded">
+             x:Name="reservationsPage">
 
     <Page.Resources>
         <Style x:Key="ButtonImage" TargetType="Image">
@@ -55,7 +54,7 @@
                 </Grid>
 
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0 0 0 25">
-                    <ItemsControl x:Name="itemsControlReservations" ItemsSource="{Binding _reservationDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                    <ItemsControl x:Name="itemsControlReservations" ItemsSource="{Binding FilteredReservations}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <local:AccommodationReservationCard/>
@@ -81,7 +80,7 @@
                 </Border>
 
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,25">
-                    <ItemsControl x:Name="itemsControlRescheduleRequests" ItemsSource="{Binding _rescheduleRequestDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
+                    <ItemsControl x:Name="itemsControlRescheduleRequests" ItemsSource="{Binding RescheduleRequests}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <local:RescheduleRequestCard/>
