Enabled Getting stats based on year selected and enabled active status when tour started

--- a/WPF/Tablet/Views/TourStatsPage.xaml
+++ b/WPF/Tablet/Views/TourStatsPage.xaml
@@ -16,8 +16,8 @@
         <Grid Margin="10" Grid.Row="0">
             <Border BorderBrush="Black" BorderThickness="1"/>
             <Label x:Name="titleText" Content="Stats For Most Visited Tour" Margin="100,10,0,10" VerticalAlignment="Center" HorizontalAlignment="Left" FontWeight="Bold" FontSize="40"/>
-            <ComboBox HorizontalAlignment="Center" Width="100" Margin="550,30,0,30" SelectedIndex="0" FontSize="16">
-                <ComboBoxItem Content="All Time" Tag="0"/>
+            <ComboBox x:Name="yearComboBox" SelectedValuePath="Tag" HorizontalAlignment="Center" Width="100" Margin="550,30,0,30" SelectedIndex="0" FontSize="16">
+                <ComboBoxItem Content="All Time" Tag="-1"/>
                 <ComboBoxItem Content="2024" Tag="2024"/>
                 <ComboBoxItem Content="2023" Tag="2023"/>
                 <ComboBoxItem Content="2022" Tag="2022"/>
