--- a/WPF/Web/Views/AccommodationCard.xaml
+++ b/WPF/Web/Views/AccommodationCard.xaml
@@ -23,7 +23,7 @@
         
     </UserControl.Resources>
     
-    <Border Margin="5 5 5 5" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
+    <Border Margin="5 5 5 5" Background="White" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
         <Grid MouseLeftButtonDown="AccommodationCardClick">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="138"/>
